# meka-flow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  chat-popup.html  electron.vite.config.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
ai-backend/: Cargo.toml
ai-backend/src/: main.rs  protocol.rs  router.rs
ai-backend/src/claude/: client.rs  stream.rs  types.rs
ai-backend/src/codex/: client.rs  mod.rs  normalizer.rs  types.rs
ai-backend/src/db/: connection.rs  harness_groups.rs  migrations.rs  mod.rs  projects.rs  sessions.rs  settings.rs  types.rs
ai-backend/src/git/: commands.rs  mod.rs  types.rs  watcher.rs  worktree.rs
ai-backend/src/normalizer/: blocks.rs  markdown.rs  mod.rs  parser.rs
ai-backend/src/session/: manager.rs  types.rs
dynamic-island/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
dynamic-island/electron/: main.ts  notchDetector.ts  preload.ts  windowManager.ts  wsClient.ts
dynamic-island/resources/: .gitignore  notch.html
dynamic-island/src/: notch-main.tsx  types.ts
electron/: chatPopupManager.ts  islandManager.ts  islandServer.ts  main.ts  preload.ts  sidecar.ts
src/: App.tsx  chat-popup.tsx  constants.ts  data.ts  index.css  models.ts  types.ts
src/components/: BoardView.tsx  CanvasView.tsx  CodeBlock.tsx  HomePage.tsx  NewSessionModal.tsx  SessionWindow.tsx  SkillPicker.tsx  TabView.tsx  TopBar.tsx
src/contexts/: GitProvider.tsx
src/services/: backend.ts  git.ts  harnessController.ts  harnessFiles.ts  harnessPrompts.ts  (+2 more)
(+42 files in other folders)
